@@ -174,11 +174,11 @@ eigenvector => [float('
 '), \&PDL::abs],
 
 loadings    => [my $loadings = pdl('
--0.728541 -0.680795 -0.269209 -0.293796 0.666268;
--0.257509 -0.314363 0.858692 -0.331417 -0.401977;
-0.286679 0.376181 0.070747 -0.832251 0.359454;
-0.549522 -0.542129 -0.0606673 -0.0632801 -0.00548315;
-0.13696 0.0477277 0.426015 0.327413 0.515039
+0.72854035 0.68079491 0.2692094 0.29379663 -0.66626785;
+-0.25750895 -0.31436277 0.85869179 -0.33141797 -0.4019762;
+-0.28667967 -0.37618117 -0.07074587 0.83225134 -0.35945416;
+-0.54952221 0.54212932 0.060667887 0.063280383 0.0054838393;
+0.13696062 0.047727115 0.42601542 0.32741254 0.51503877
 '), \&PDL::abs],
 
 pct_var => pdl('0.319391131401062 0.234781861305237 0.210110354423523 0.120718801021576 0.114997816085815'),
@@ -186,7 +186,7 @@ pct_var => pdl('0.319391131401062 0.234781861305237 0.210110354423523 0.12071880
   test_stats_cmp(\%m, \%exp, 1e-4);
   is_pdl $m{loadings}, $loadings, {require_equal_types=>0};
   my ($iv, $ic) = $loadings->pca_sorti;
-  is_pdl $iv, indx(qw(4 1 0 2 3));
+  is_pdl $iv, indx(qw(0 1 4 2 3));
   is_pdl $ic, pdl(qw( 0 1 2 ));
 }
 
