@@ -1,3 +1,5 @@
+- no longer uses PDL::Slatec
+
 0.851 2024-12-27
 - relax the tests' type requirement
 
